change syntax highlighting, spacing to improve readability fix a spacing issue on aurelia-bundling

--- a/style.scss
+++ b/style.scss
@@ -202,10 +202,10 @@ article {
   a {
     color: initial;
   }
-  code {
+  p > code {
     background: white;
-    padding: 1px 2px;
-    vertical-align: 1px;
+    padding: 0 2px 2px 2px;
+    vertical-align: bottom;
   }
   strong { 
     font-weight: bold;
